# ece414-examples

./: .gitignore  README.md
adc_demo/: CMakeLists.txt
blink2/: CMakeLists.txt  test0.c
gpio_demo/: CMakeLists.txt  gpio_demo.c
pwm_demo/: pwm_demo.c  pwm_pin.c
tbird/: tbird_fsm.c
tft_demo/: CMakeLists.txt  tft_demo.c
tft_master/: CMakeLists.txt  TFT_PIO.c
timer/: CMakeLists.txt  timer.c  timer.h  timer_demo.c
touchscreen_demo/: CMakeLists.txt  TouchScreen.c  TouchScreen.h  touchscreen_demo.c
uart_demo/: CMakeLists.txt
